deployment/manifests/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
    name: apps

---
apiVersion: v1
kind: Namespace
metadata:
    name: postgres
